--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cypress": "^7.4.0",
     "jasmine-marbles": "^0.8.1",
     "jasmine-spec-reporter": "^7.0.0",
+    "moment": "^2.29.1",
     "protractor": "^7.0.0",
     "rxjs": "~6.6.0",
     "ts-node": "^10.0.0",
